fix: 쿠키 이름 지정